--- a/app/views/modals/delete.blade.html
+++ b/app/views/modals/delete.blade.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
-  <h1>Xóa mẫu vật này?</h1>
+  <h1>{{"quanly.deleteSample" | translate }}?</h1>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-danger" ng-click="ok()">Có</button>
-    <button class="btn btn-success" ng-click="cancel()">Không</button>
+    <button class="btn btn-danger" ng-click="ok()">{{"quanly.co" | translate }}</button>
+    <button class="btn btn-success" ng-click="cancel()">{{"quanly.khong" | translate }}</button>
 </div>
