--- a/app/views/templates/footer.template.html
+++ b/app/views/templates/footer.template.html
@@ -17,15 +17,15 @@
 	<div class="container">
 		<div class="footer-content">
 			<div class="col-md-4 col-xs-12">
-				<p>Liên hệ: Bảo Tàng Thiên Nhiên Việt Nam</p>
-				<p>Địa chỉ: Số 18 Hoàng Quốc Việt - Cầu Giấy - Hà Nội</p>
-				<p>ĐT: (+84-24) 3756 8328 - Fax: (+84-24) 3756 8328</p>
+				<p>{{"footer.lienHe" | translate }}</p>
+				<p>{{"footer.diaChi" | translate }}</p>
+				<p>{{"footer.dienThoai" | translate }}: (+84-24) 3756 8328 - Fax: (+84-24) 3756 8328</p>
 				<p>Email: vnmn@vnmn.vast.vn - Facebook: www.facebook.com/baotangthiennhien/</p>
 			</div>
 			<div class="col-md-4 col-xs-12 text-center">
 				<img src="asset/image/logo.png" />
 				<br>
-				<p style="text-transform: uppercase;">Bảo Tàng Thiên Nhiên Việt Nam</p>
+				<p style="text-transform: uppercase;">{{"tenBaoTang" | translate }}</p>
 			</div>
 		</div>
 	</div>
