--- a/views/guest-home.ejs
+++ b/views/guest-home.ejs
@@ -65,7 +65,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
           <!-- <li><a ui-sref="tim-kiem" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a></li> -->
-          <!-- <li ng-click="changeLang('eng')"><a href=""><img src="/app/asset/image/en.gif"></a></li> -->
+          <!-- <li ng-click="changeLang('eng')"><a href=""><img src="/guest/en.gif"></a></li> -->
           <li  ng-click="changeLang('vi')"><a href=""><img src="/guest/vi.gif"></a></li>
           <li><a class="btn " href="/auth/login">Đăng nhập</a></li>
         </ul>
