--- a/app/views/templates/home.template.html
+++ b/app/views/templates/home.template.html
@@ -21,8 +21,8 @@
 
 <div id="header" class="jumbotron">
     <div class="container">
-        <h2>Bộ Sưu Tập Mẫu Vật Quốc Gia</h2>
-         <h3>Về Thiên Nhiên Việt Nam</h3>
+        <h2>{{"tieude" | translate }}</h2>
+         <h3>{{"tieudecon" | translate }}</h3>
          <!-- <div style="padding: 10px"></div> -->
     </div>
 </div>
