--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -1,6 +1,6 @@
 <div class="col-sm-10 col-sm-offset-1 col-xs-12" bs-loading-overlay bs-loading-overlay-delay="200">
 	<form id="form-content" name="FormData">
-		<center><h3>Chỉnh sửa mẫu dữ liệu động vật > Đề tài: {{maDeTai}}</h3></center>
+		<center><h3>{{"ani.editTitle" | translate }} {{maDeTai}}</h3></center>
 		<div class="container-fluid">
 			<input type="text" name="id" id="obId" value="{{data.id}}" style="display: none;" ng-model="data.id">
 			<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
@@ -331,9 +331,9 @@
 								<span>{{"ani.viTri" | translate }}: </span>
 							</div>
 							<div class="col-sm-6">
-								<input type="radio" name="fDiaDiemThuMau" ng-model="data.fDiaDiemThuMau" ng-click="starDatLien()" id="datLien" value="Trên đất liền"> Trên đất liền
-								<input type="radio" name="fDiaDiemThuMau" id="dao" ng-click="starDao()" ng-model="data.fDiaDiemThuMau"  value="Trên đảo"> Trên đảo
-								<input type="radio" name="fDiaDiemThuMau" id="trenBien" ng-click="starBien()" ng-model="data.fDiaDiemThuMau" value="Trên biển"> Trên biển
+								<input type="radio" name="fDiaDiemThuMau" ng-model="data.fDiaDiemThuMau" ng-click="starDatLien()" id="datLien" value="Trên đất liền"> {{"khac.trenDatLien" | translate }}
+								<input type="radio" name="fDiaDiemThuMau" id="dao" ng-click="starDao()" ng-model="data.fDiaDiemThuMau"  value="Trên đảo"> {{"khac.trenDao" | translate }}
+								<input type="radio" name="fDiaDiemThuMau" id="trenBien" ng-click="starBien()" ng-model="data.fDiaDiemThuMau" value="Trên biển"> {{"khac.trenBien" | translate }}
 							</div>
 						</div>
 						<div class="row">
@@ -393,23 +393,23 @@
 							{{"ani.viDo" | translate }} <span class="has-required">(*)</span>:
 							<input type="text" id="viDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
 							<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
-								<input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> độ
-								<input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> phút
-								<input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> giây
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> {{"khac.do" | translate }}
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> {{"khac.phut" | translate }}
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> {{"khac.giay" | translate }}
 							</div>
 						</div>
 						<div class="col-sm-4">
 							{{"ani.kinhDo" | translate }} <span class="has-required">(*)</span>:
 							<input type="text" id="kinhDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
 							<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
-								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
-								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
-								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.do" | translate }}
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.phut" | translate }}
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.giay" | translate }}
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<label> </label><br>
-							<button type="button" class="btn btn-success" ng-click="showModal()">Chọn trên bản đồ</button>
+							<button type="button" class="btn btn-success" ng-click="showModal()">{{"khac.chooseMap" | translate }}</button>
 						</div>
 					</div>
 				</div>
