--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -4,7 +4,7 @@
         <input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
         <input type="hidden" name="sample" value="dia-chat" id="sample">
     	<center>
-    		<h3>Chỉnh sửa mẫu dữ liệu địa chất > Đề tài: {{maDeTai}}</h3>
+    		<h3>{{"geo.editTitle" | translate }} {{maDeTai}}</h3>
     	</center>
         <div class="container-fluid">
             <ul class="nav nav-tabs group tabs">
@@ -262,9 +262,9 @@
     							<span>{{"geo.viTri" | translate }}: </span>
     						</div>
     						<div class="col-sm-6">
-    							<input type="radio" name="fDiaDiemThuMau" value="Trên đất liền" ng-model="data.fDiaDiemThuMau" ng-click="starDatLien()" id="datLien"> Trên đất liền
-    							<input type="radio" name="fDiaDiemThuMau" value="Trên đảo" id="dao" ng-click="starDao()" ng-model="data.fDiaDiemThuMau"> Trên đảo
-    							<input type="radio" name="fDiaDiemThuMau" value="Trên biển" id="trenBien" ng-click="starBien()" ng-model="data.fDiaDiemThuMau"> Trên biển
+    							<input type="radio" name="fDiaDiemThuMau" value="Trên đất liền" ng-model="data.fDiaDiemThuMau" ng-click="starDatLien()" id="datLien"> {{"khac.trenDatLien" | translate }}
+    							<input type="radio" name="fDiaDiemThuMau" value="Trên đảo" id="dao" ng-click="starDao()" ng-model="data.fDiaDiemThuMau"> {{"khac.trenDao" | translate }}
+    							<input type="radio" name="fDiaDiemThuMau" value="Trên biển" id="trenBien" ng-click="starBien()" ng-model="data.fDiaDiemThuMau"> {{"khac.trenBien" | translate }}
     						</div>
     					</div>
     					<div class="row">
@@ -324,23 +324,23 @@
                             {{"geo.viDo" | translate }} <span class="has-required">(*)</span>:
                             <input type="text" id="viDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
                             <div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
-                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> độ
-                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> phút
-                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> giây
+                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> {{"khac.do" | translate }}
+                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> {{"khac.phut" | translate }}
+                                <input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> {{"khac.giay" | translate }}
                             </div>
                         </div>
                         <div class="col-sm-4">
                             {{"geo.kinhDo" | translate }} <span class="has-required">(*)</span>:
                             <input type="text" id="kinhDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
                             <div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
-                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
-                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
-                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
+                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.do" | translate }}
+                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.phut" | translate }}
+                                <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> {{"khac.giay" | translate }}
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <label> </label><br>
-                            <button type="button" class="btn btn-success" ng-click="showModal()">Chọn trên bản đồ</button>
+                            <button type="button" class="btn btn-success" ng-click="showModal()">{{"khac.chooseMap" | translate }}</button>
                         </div>
                     </div>
                 </div>
