--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -15,12 +15,12 @@
 			</div>
 		</div>
 	</div>
-	<center><h3><b>Quản lý mẫu vật đã đăng</b></h3></center>
+	<center><h3><b>{{"quanly.title" | translate }}</b></h3></center>
 	<form>
 		<div class="form-group">
 			<div class="input-group">
 				<div class="input-group-addon"><i class="fa fa-search"></i></div>
-				<input type="text" class="form-control" placeholder="Nội dung tìm kiếm" ng-model="searchData">
+				<input type="text" class="form-control" placeholder="{{'quanly.timkiem' | translate }}" ng-model="searchData">
 			</div>      
 		</div>
 	</form>
@@ -28,7 +28,7 @@
 		<thead>
 			<tr>
 				<th colspan="3">
-					Xem 
+					{{"quanly.xem" | translate }} 
 						<select ng-model="viewby" ng-change="setItemsPerPage(viewby)">
 							<option value="3">3</option>
 							<option value="5">5</option>
@@ -37,66 +37,66 @@
 							<option value="30">30</option>
 							<option value="40">40</option>
 							<option value="50">50</option>
-						</select> mẫu.
+						</select> {{"quanly.mau" | translate }}.
 				</th>
 				<th colspan="5">
 					<button class="btn btn-sm btn-success" style="cursor: pointer; float: right; border-radius: 0px;" ng-click="selectAll()"><span class="glyphicons glyphicons-ok"></span> Select all</button>
 
 					<div class="dropdown" style="float: right;">
-						<button class="btn btn-sm btn-primary" style="border-radius: 0px;"><span class="glyphicon glyphicon-export"></span> Trích xuất <b class="caret"></b></button>
+						<button class="btn btn-sm btn-primary" style="border-radius: 0px;"><span class="glyphicon glyphicon-export"></span> {{"quanly.trichxuat" | translate }} <b class="caret"></b></button>
 						<input type="hidden" name="link" ng-bind="link" id="input" class="form-control" value="">
 						<div class="dropdown-content" ng-controller="ExportFileController">
-							<a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
-							<a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
-							<a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> Xuất zip</a>
+							<a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> {{"quanly.xuat" | translate }} pdf</a>
+							<a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> {{"quanly.xuat" | translate }} docx</a>
+							<a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> {{"quanly.xuat" | translate }} zip</a>
 						</div>
 					</div>
 				</th>
 			</tr>
 			<tr>
 				<th ng-click="sort('tenVietNam')" style="cursor: pointer;">
-						Tên mẫu
+						{{"quanly.tenmau" | translate }}
 						<span ng-show="sortKey == 'tenVietNam' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'tenVietNam' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('soHieuBaoTangCS')" style="cursor: pointer;">
-						Số hiệu BTCS
+						{{"quanly.soHieuBaoTangCS" | translate }}
 						<span ng-show="sortKey == 'soHieuBaoTangCS' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'soHieuBaoTangCS' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('soHieuBTTNVN')" style="cursor: pointer;">
-						Số hiệu BTTNVN
+						{{"quanly.soHieuBTTNVN" | translate }}
 						<span ng-show="sortKey == 'soHieuBTTNVN' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'soHieuBTTNVN' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('nguoiGiamDinh')" style="cursor: pointer;">
-						Người phân tích
+						{{"quanly.nguoiPhanTich" | translate }}
 						<span ng-show="sortKey == 'nguoiGiamDinh' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'nguoiGiamDinh' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('nguoiThuMau')" style="cursor: pointer;">
-						Người thu mẫu
+						{{"quanly.nguoiThuMau" | translate }}
 						<span ng-show="sortKey == 'nguoiThuMau' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'nguoiThuMau' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('created_at')" style="cursor: pointer;">
-						Ngày đăng
+						{{"quanly.ngayDang" | translate }}
 						<span ng-show="sortKey == 'created_at' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'created_at' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
 				<th ng-click="sort('fApproved')" style="cursor: pointer;">
-						Trạng thái
+						{{"quanly.trangThai" | translate }}
 						<span ng-show="sortKey == 'fApproved' && !sortReverse" class="fa fa-caret-down"></span>
 						<span ng-show="sortKey == 'fApproved' && sortReverse" class="fa fa-caret-up"></span>
 				</th>
-				<th>Hành động</th>
+				<th>{{"quanly.hanhdong" | translate }}</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr dir-paginate="(key, post) in data | orderBy:sortKey:sortReverse | filter:searchData|itemsPerPage:viewby" current-page="currentPage">
 				<td>
 					<input type="checkbox" class="check-box" style="margin: 0px;" ng-model="post.selected" data-id='/content/{{link}}/{{post._id}}?display='>
-					<a class="tenvietnam" style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html">{{post.tenVietNam ? post.tenVietNam : 'Mẫu vật'}}</a>
+					<a class="tenvietnam" style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html">{{post.tenVietNam ? post.tenVietNam : "quanly.mauvat" | translate }}</a>
 				</td>
 				<td>
 					{{post.soHieuBaoTangCS}}
@@ -114,7 +114,7 @@
 					{{post.created_at | date: "yyyy-MM-dd"}}
 				</td>
 				<td>
-					<label class="label label-{{post.fApproved ? 'success' : 'warning'}}">{{post.fApproved ? ' Đã phê duyệt' : ' Chưa phê duyệt'}}</label>
+					<label class="label label-{{post.fApproved ? 'success' : 'warning'}}">{{post.fApproved ? ("khac.daPheDuyet" | translate) : ("khac.chuaPheDuyet" | translate) }}</label>
 				</td>
 				<td>
 					<div ng-if="link == 'dong-vat'" ng-controller="ModalCtrl">
