--- a/views/lockscreen.ejs
+++ b/views/lockscreen.ejs
@@ -26,7 +26,7 @@
 <!-- Automatic element centering -->
 <div class="lockscreen-wrapper">
   <div class="lockscreen-logo">
-    <a href="/admin/index2.html"><b>Đăng nhập lại</b></a>
+    <a href="/admin/index2.html"><b><%= TEXT.RE_LOG_IN %></b></a>
   </div>
   <!-- User name -->
   <div class="lockscreen-name"><%= oldUser.fullname %></div>
@@ -43,7 +43,7 @@
     <form class="lockscreen-credentials" method="post" onsubmit="handleSubmit()">
       <input type="hidden" name="email" value="<%= oldUser.username %>">
       <div class="input-group">
-        <input type="password" name="password" id="password" class="form-control" placeholder="Mật khẩu">
+        <input type="password" name="password" id="password" class="form-control" placeholder="<%= TEXT.PASSWORD %>">
         <input type="hidden" name="redirectBack" id="redirectBack">
         <div class="input-group-btn">
           <button type="submit" class="btn"><i class="fa fa-arrow-right text-muted"></i></button>
@@ -58,7 +58,7 @@
     <span class="text-danger"> <%= message %></span>
   </div>
   <div class="text-center">
-    <a href="/auth/notme">Đăng nhập bằng tài khoản khác</a>
+    <a href="/auth/notme"><%= TEXT.LOG_IN_WITH_ANOTHER_USER_NAME %></a>
   </div>
   <div class="lockscreen-footer text-center">
     
