fix coordiante disappear

--- a/app/views/modals/dialogs.blade.html
+++ b/app/views/modals/dialogs.blade.html
@@ -1,6 +1,6 @@
 <div modal="showModal">
 	<div class="modal-header">
-		<h4><strong>Thông báo</strong></h4>
+		<h4><strong>{{ 'khac.thongBao' | translate }}</strong></h4>
 	</div>
 	<div class="modal-body">
 		<p>{{message}}</p>
