--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -989,7 +989,7 @@
 		<div class="bottom-nav">
 			<center>
 				<button type="submit" ng-click="updatePost()" class="btn btn-primary">
-					<span class="glyphicon glyphicon-pencil"></span> Cập nhật mẫu
+					<span class="glyphicon glyphicon-pencil"></span> {{ 'khac.capNhatMau' | translate }}
 				</button>
 				<!-- <button type="button" ng-click="saveAs()" class="btn btn-success">
 					<span class="glyphicon glyphicon-floppy-saved"></span> Lưu mẫu mới
